2.2.4 adds code and per support, fixes minor list whitespace.

--- a/app/scss/core/_defaults.scss
+++ b/app/scss/core/_defaults.scss
@@ -70,6 +70,8 @@ $clone-focus-colour: $clone-hover-colour !default;
 
 $clone-selection-background-colour: $clone-c5 !default;
 
+$clone-code-background: $clone-black !default;
+
 $clone-table-heading-colour: $clone-c1 !default;
 
 $clone-alert--information: $clone-go !default;
